--- a/home-page.html
+++ b/home-page.html
@@ -4,36 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Basic HTML Page</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f4f4f4;
-        margin: 0;
-        padding: 20px;
-      }
-      header {
-        background-color: #333;
-        color: white;
-        padding: 10px 20px;
-        text-align: center;
-      }
-      main {
-        margin: 20px 0;
-      }
-      footer {
-        background-color: #333;
-        color: white;
-        text-align: center;
-        padding: 10px;
-        position: fixed;
-        bottom: 0;
-        width: 100%;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>
-      <h1>Welcome to My Page</h1>
+    <header class="header-dark">
+      <h1>Header 1-1</h1>
+    </header>
+    <header class="header-dark">
+      <h1>Header 1-2</h1>
+    </header>
+    <header class="header-default">
+      <h1>Header 2</h1>
     </header>
     <main>
       <p>This is a basic HTML page. Привіт!</p>
